--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -6,12 +6,10 @@
 {% endblock %}
 
 {% block main %}
-    <div class="jumbotron text-center">
-        <h1>{{ post.blog.title }} - {{ post.title }}</h1>
-    </div>
-    <div class="container">
+    <div class="container margin-top">
         <div id="post-content" class="well">
             <div class="row">
+                <h1 class="text-center">{{ post.title }}</h1>
                 {% if post.image %}
                     <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" />
                 {% endif %}
@@ -19,7 +17,6 @@
             <div class="container">
                 <div class="col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                     <div class="row">
-                        <h1 class="text-center">{{ post.title }}</h1>
                         {% include 'maininclude/social_share.html' %}
                         {{ post.body|safe }}
                         <h4 class="text-center">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
