bug fixes, template fixes

--- a/blog/templates/blogcontent/dashboard.html
+++ b/blog/templates/blogcontent/dashboard.html
@@ -41,7 +41,7 @@
                                                 <span class="glyphicon glyphicon-edit"></span></div></a>
                                         </td>
                                         <td>
-                                            <a href="{{ p.get_absolute_url }}">{{ p.title }}</a>
+                                            <a class="btn btn-default btn-block" href="{{ p.get_absolute_url }}">{{ p.title }}</a>
                                         </td>
                                         <td>
                                             {{ p.views }}
