--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -17,7 +17,7 @@
         <!--</div>-->
     {# endif #}
 
-    <div class="col-md-8">
+    <div id="map-side" class="col-md-8">
         <div id="blog-header-row" class="jumbotron row">
             <div class="text-center">
                 <h1>{% if blog.logo %}<img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> {% endif %}{{ blog.title }}</h1>
