--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -23,7 +23,11 @@
                 <h1>{% if blog.logo %}<img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> {% endif %}{{ blog.title }}</h1>
             </div>
         </div>
-        <div class="col-md-offset-1 col-md-10">
+        {% if blog.twitter %}
+            <div class="col-sm-7">
+        {% else %}
+            <div class="col-sm-offset-1 col-sm-10">
+        {% endif %}
             <div class="row row-padding">
                 <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">Read Blog Details</div>
             </div>
@@ -32,13 +36,13 @@
                     {% include "bloginclude/post_list.html" %}
                 {% endwith %}
                 {% with blog as b %}
-                    <div class="text-center" style="margin-bottom:30px;">
+                    <div class="text-center">
                         {% include 'bloginclude/wave_modify.html' %}
                     </div>
                 {% endwith %}
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-sm-5 margin-top">
             {% if blog.twitter and blog.twitter_widget_id %}
                 {% with blog.twitter as twitter_handle and blog.twitter_widget_id as twitter_widget_id %}
                     {% include "maininclude/twitter_timeline.html" %}
