--- a/blog/templates/bloginclude/post_list.html
+++ b/blog/templates/bloginclude/post_list.html
@@ -1,22 +1,28 @@
 {% load static %}
+{% load pagination_tags %}
+{% autopaginate posts 10 %}
+
 {% for p in posts %}
     {% if forloop.first or forloop.counter0|divisibleby:"2" %}<div class="row">{% endif %}
         <div class="col-md-6 text-center post-list-container">
-                <a class="brand-light" href="{{ p.get_absolute_url }}">
-                    <img src="{{ p.get_image_url }}" class="img-responsive img-rounded{% if not p.image %} no-pic{% endif %}" />
-                    <h4>{{ p.title }}</h4>
-                </a>
-                {% if p.headline %}
-                    <h4>{{ p.headline }}</h4>
+            <a class="brand-light" href="{{ p.get_absolute_url }}">
+                <img src="{{ p.get_image_url }}" class="img-responsive img-rounded{% if not p.image %} no-pic{% endif %}" />
+                <h4>{{ p.title }}</h4>
+            </a>
+            {% if p.headline %}
+                <h4>{{ p.headline }}</h4>
+            {% endif %}
+            <p>By <a class="brand-light" href="{{ p.blog.get_absolute_url }}">{{ p.blog.title }}</a>
+                {% if p.get_topics %}
+                    about
+                    {% for t in p.get_topics %}
+                        <a class="brand-light" href="{{ t.get_absolute_url }}">{{ t }}</a>{% if not forloop.last %},{% endif %}
+                    {% endfor %}
                 {% endif %}
-                <p>By <a class="brand-light" href="{{ p.blog.get_absolute_url }}">{{ p.blog.title }}</a>
-                    {% if p.get_topics %}
-                        about
-                        {% for t in p.get_topics %}
-                            <a class="brand-light" href="{{ t.get_absolute_url }}">{{ t }}</a>{% if not forloop.last %},{% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    on {{ p.create_date|date }}</p>
+                on {{ p.create_date|date }}</p>
         </div>
     {% if forloop.last or forloop.counter|divisibleby:"2" %}</div>{% endif %}
 {% endfor %}
+<div class="text-center">
+    {% paginate %}
+</div>
