change about page

--- a/main/templates/maincontent/about.html
+++ b/main/templates/maincontent/about.html
@@ -1,6 +1,11 @@
 {% extends "maininclude/base.html" %}
 
 {% block main %}
+    <div class="row">
+        <div class="jumbotron text-center">
+            <h1>About Travel Blog Wave</h1>
+        </div>
+    </div>
     <div id="about-container" class="container margin-top col-md-8 col-md-offset-2">
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
@@ -13,12 +18,15 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
               <div class="panel-body">
-                <p>Travel Blog Wave was founded in 2014 by a nomadic web developer/blogger. Travel Blogs have
-                been becoming more popular in recent years, but there still is so much room to grow. The goal
-                of Travel Blog Wave is to improve the world of travel blogging, for both readers and writers.</p>
+                <p>Travel Blog Wave was founded by a nomadic web developer/blogger looking to improve the world of
+                    travel blogging. Travel blogs have been gaining traction in recent years, but there still is so much room to grow.
+                The goal of Travel Blog Wave is to create the best travel blogging platform out there, for both readers and writers.
+                Instead of just creating the an amazing travel blog, why not create an amazing travel blog platform for
+                everyone to enjoy? </p>
+
                 <p>We plan to be highly influenced by our users and keep the functionality of the site at the
-                highest level possible. We're committed to providing the best resource on the market for both
-                reading and writing travel blogs.</p>
+                highest level possible. We're committed to providing the best resource on the market and are open
+                to any suggestions for improvement!</p>
               </div>
             </div>
           </div>
@@ -36,7 +44,7 @@
                 you would rely on google and/or social media searches and hope to find what you were looking for.
                 On travel blog wave, you will be able to refine your search to find what you're truly searching for.
                 On top of that, you will easily be able to follow your favorite blogs on TBWave, and see
-                all new posts in one location!</p>
+                all new relevant posts in one location!</p>
                 <ul>
                   <li>Search by Place (Country, City, etc) and Topic</li>
                   <li>Add blog to your wave to easily follow</li>
@@ -60,10 +68,10 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
-                  <p>Join the future of travel blogging. This site was founded by a travel blogger and it is in place
+                  <p>Join the future of travel blogging. This site was founded by a travel blogger and it was created
                   not only just for readers, we also want to help blog owners. In the beginning we are just focused
                   on creating a quality product and the best place to create a travel blog. In the future we
-                  will be giving out prizes and financial benefits to help out blog owners
+                  will be giving out prizes and financial benefits to help out blog owners on their future endeavors.
                   </p>
                   <ul>
                       <li>Easily create a travel blog</li>
