--- a/main/templates/maininclude/footer.html
+++ b/main/templates/maininclude/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer" class="text-center">
     <div class="col-md-9">
-        <a href="{% url 'main-about' %}">About Us</a>
+        <a href="{% url 'main-about' %}">About</a>
     </div>
     <div class="col-md-3">
         <div class="social-icons">
