--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,6 +64,10 @@ legend h1 {
 #footer a:hover {
     color:#B1D0DD;
 }
+.fb-like {
+    padding-top:15px;
+}
+
 #navbar-profile-img {
     height:40px;
     margin:5px;
