--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -5,6 +5,7 @@
         <title>
             {% block title %}Default Title{% endblock %}
         </title>
+        {% include "maininclude/installs.html" %}
         {% block stylesheets %}
             <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
             <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
