--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -21,6 +21,22 @@
                         {{ post.body|safe }}
                         <h4 class="text-center">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
                     </div>
+                    <div class="row">
+                        {% if post.get_prev_blog_post %}
+                            {% with post.get_prev_blog_post as p and "<span class='glyphicon glyphicon-chevron-left' ></span> Previous Post" as div_header %}
+                                {% include "bloginclude/post_container.html" %}
+                            {% endwith %}
+                        {% else %}
+                            <div class="col-sm-6"></div>
+                        {% endif %}
+                        {% if post.get_next_blog_post %}
+                            {% with post.get_next_blog_post as p and "Next Post <span class='glyphicon glyphicon-chevron-right' ></span> " as div_header %}
+                                {% include "bloginclude/post_container.html" %}
+                            {% endwith %}
+                        {% else %}
+                            <div class="col-sm-6"></div>
+                        {% endif %}
+                    </div>
                     <div class="row" id="post-footer">
                         {% include "maininclude/social_share.html" %}
                         <h4>Written by {{ post.author.username }} on {{ post.create_date }}
