--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -61,7 +61,9 @@
                             {% endfor %}
                         </div>
                     {% endif %}
-                    {% include "google_ads/skyscraper.html" %}
+                    <div class="margin-top">
+                        {% include "google_ads/skyscraper.html" %}
+                    </div>
                 </div>
              </div>
         </div>
