--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -10,7 +10,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'main-home' %}"><img src="{% static 'img/logo_light.png' %}" /></a>
+      <a class="navbar-brand" href="{% url 'main-home' %}"><img src="{% static 'img/logo_light.png' %}"
+              alt="Create and Follow Travel Blogs" /></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
