--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -15,14 +15,14 @@
 {% block main %}
     <div class="container margin-top">
         <div id="post-content" class="well">
-            <div class="row">
-                <h1 class="text-center">{{ post.title }}</h1>
-                {% if post.image %}
-                    <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" />
-                {% endif %}
-            </div>
             <div class="container">
                 <div class="col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                    <div class="row">
+                        <h1 class="text-center">{{ post.title }}</h1>
+                        {% if post.image %}
+                            <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" />
+                        {% endif %}
+                    </div>
                     <div class="row">
                         {% include 'maininclude/social_share.html' %}
                         {{ post.body|safe }}
@@ -68,6 +68,11 @@
                             {% endfor %}
                         </div>
                     {% endif %}
+                    <div class="margin-top">
+                        {% with post.blog as blog %}
+                            {% include "maininclude/twitter_timeline.html" %}
+                        {% endwith %}
+                    </div>
                     <div class="margin-top">
                         {% include "google_ads/skyscraper.html" %}
                     </div>
