--- a/main/templates/maininclude/twitter_timeline.html
+++ b/main/templates/maininclude/twitter_timeline.html
@@ -1,2 +1,6 @@
-<a class="twitter-timeline" href="https://twitter.com/{{ twitter_handle }}" data-widget-id="{{ twitter_widget_id }}">Tweets by @{{ twitter_handle }}</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+{% if blog.twitter and blog.twitter_widget_id %}
+    {% with blog.twitter as twitter_handle and blog.twitter_widget_id as twitter_widget_id %}
+        <a class="twitter-timeline" href="https://twitter.com/{{ twitter_handle }}" data-widget-id="{{ twitter_widget_id }}">Tweets by @{{ twitter_handle }}</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    {% endwith %}
+{% endif %}
