about and active help text

--- a/main/templates/maincontent/about.html
+++ b/main/templates/maincontent/about.html
@@ -1,5 +1,9 @@
 {% extends "maininclude/base.html" %}
 
+{% block title %}
+    Create Travel Blog | Search Travel Blogs
+{% endblock %}
+
 {% block main %}
     <div class="row">
         <div class="jumbotron text-center">
