--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -7,20 +7,20 @@
         </title>
         {% include "maininclude/installs.html" %}
         {% block stylesheets %}
-            <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">-->
-            <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>-->
+            <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+            <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
 
-            <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+            <!--<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />-->
 
             <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
             <link rel="icon" href="{% static 'img/logo.ico' %}">
         {% endblock %}
         {% block javascript %}
-            <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
-            <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-            <script src="{% static 'js/jquery.min.js' %}"></script>
-            <script src="{% static 'js/bootstrap.min.js' %}"></script>
+            <!--<script src="{% static 'js/jquery.min.js' %}"></script>-->
+            <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>-->
 
             <script src="{% static 'js/script.js' %}"></script>
         {% endblock %}
