map icon change

--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Travel Blog Wave | {{ post.title }}
+    {{ post.title }}
 {% endblock %}
 
 {% block meta_tags %}
