--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -57,14 +57,20 @@
                 <div class="col-sm-3 hidden-xs">
                     {% if other_posts %}
                         <div id="other-posts">
-                        <h2 class="text-center">Related Posts</h2>
+                        <h2 class="text-center">Recent Posts</h2>
                             {% for p in other_posts %}
-                                <a href="{{ p.get_absolute_url }}" class="brand">
-                                    <h4 class="other-post-title">{{ p.title }}</h4>
-                                    {% if p.image %}
-                                        <img src="{{ p.get_image_url }}" class="img-responsive img-rounded" />
-                                    {% endif %}
-                                </a>
+                                <div class="row">
+                                    <a href="{{ p.get_absolute_url }}" class="brand">
+                                        <div class="col-sm-4">
+                                            {% if p.image %}
+                                                <img src="{{ p.get_image_url }}" class="img-responsive img-rounded" />
+                                            {% endif %}
+                                        </div>
+                                        <div class="col-sm-8">
+                                                <h4 class="other-post-title">{{ p.title }}</h4>
+                                        </div>
+                                    </a>
+                                </div>
                             {% endfor %}
                         </div>
                     {% endif %}
