--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,7 +106,7 @@ img {
     width:100%;
 
 }
-#main-information span {
+.info-row span {
     font-size:500%;
     margin:25px 0;
 }
@@ -133,6 +133,11 @@ img {
 }
 .margin-top {
     margin-top:20px;
+}
+#recent-carousel .carousel-inner img {
+}
+#recent-post-row {
+    background-color:#eee;
 }
 
 .adsbygoogle {
