--- a/main/templates/maininclude/place_autocomplete.html
+++ b/main/templates/maininclude/place_autocomplete.html
@@ -5,6 +5,12 @@
    function initialize() {
       var input = document.getElementById('place-search');
       var autocomplete = new google.maps.places.Autocomplete(input);
+
+      google.maps.event.addListener(autocomplete, 'place_changed', function () {
+            // set the place_id field to the Google Place ID
+            var place = autocomplete.getPlace();
+            document.getElementById('id_place_id').value = place.place_id;
+      });
    }
    google.maps.event.addDomListener(window, 'load', initialize);
 </script>
