--- a/static/css/style.css
+++ b/static/css/style.css
@@ -287,6 +287,12 @@ applied to individual blog posts, those are defined int he Post section
 /*
 css styles that are specific to individual posts
 */
+#post-body img {
+    display:block;
+    width:100%;
+    max-width:100%;
+    height:auto;
+}
 #post-main-image {
     margin-left:auto;
     margin-right:auto;
