--- a/static/css/style.css
+++ b/static/css/style.css
@@ -293,6 +293,10 @@ css styles that are specific to individual posts
     max-width:100%;
     height:auto;
 }
+#post-body .caption {
+    text-align: center;
+    font-style: italic;
+}
 #post-main-image {
     margin-left:auto;
     margin-right:auto;
