--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -41,7 +41,7 @@
             {% include "maininclude/header.html" %}
         {% endblock %}
         <div id="wrap">
-            <div id="main" class="container-full" role="main">
+            <div id="main" role="main">
                 {% block main %}{% endblock %}
             </div>
         </div>
