--- a/main/templates/maininclude/social_share.html
+++ b/main/templates/maininclude/social_share.html
@@ -15,7 +15,7 @@
                 <img src="{% static 'img/fb_share.png' %}" alt="Travel Blog Wave Facebook"></img></a>
 
             <!-- google+ share -->
-            <a target="_blank" rel="Publisher" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}">
+            <a target="_blank" rel="Publisher" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}" class="hidden-xs">
                 <img src="{% static 'img/google_share.png' %}" alt="Travel Blog Wave Google+"></img></a>
         </div>
     </div>
