change viewport to be responsive

--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -32,7 +32,7 @@
             <meta name="robots" content="index, follow">
             <meta charset="UTF-8">
             <meta name="title" content="Travel Blog Wave | Create and Follow Travel Blogs">
-            <meta name="viewport" content="width=400, initial-scale=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
         {% endblock %}
         {% block extra_head %}{% endblock %}
     </head>
