--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                     <div class="row">
-                        <h1 class="text-center">{{ post.title }}</h1>
+                        <h1 id="post-title">{{ post.title }}</h1>
                         {% if post.image %}
                             <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" />
                         {% endif %}
@@ -31,20 +31,16 @@
                         <h4 class="text-center">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
                     </div>
                     <div class="row">
-                        {% if post.get_prev_blog_post %}
-                            {% with post.get_prev_blog_post as p and "<span class='glyphicon glyphicon-chevron-left' ></span> Previous Post" as div_header %}
-                                {% include "bloginclude/post_container.html" %}
-                            {% endwith %}
-                        {% else %}
-                            <div class="col-xs-6"></div>
-                        {% endif %}
-                        {% if post.get_next_blog_post %}
-                            {% with post.get_next_blog_post as p and "Next Post <span class='glyphicon glyphicon-chevron-right' ></span> " as div_header %}
-                                {% include "bloginclude/post_container.html" %}
-                            {% endwith %}
-                        {% else %}
-                            <div class="col-xs-6"></div>
-                        {% endif %}
+                        {% with post.get_prev_blog_post as thumbnail_post %}
+                          <div class="col-xs-6">
+                            {% include "bloginclude/post_thumbnail.html" %}
+                          </div>
+                        {% endwith %}
+                        {% with post.get_next_blog_post as thumbnail_post %}
+                          <div class="col-xs-6">
+                            {% include "bloginclude/post_thumbnail.html" %}
+                          </div>
+                        {% endwith %}
                     </div>
                     <div class="row" id="post-footer">
                         {% include "maininclude/social_share.html" %}
@@ -60,28 +56,23 @@
                 </div>
                 <div class="col-sm-3 hidden-xs">
                     {% if other_posts %}
-                        <div id="other-posts">
-                        <h2 class="text-center">Recent Posts</h2>
-                            {% for p in other_posts %}
-                                <div class="row">
-                                    <a href="{{ p.get_absolute_url }}" class="brand">
-                                        <div class="col-sm-4">
-                                            {% if p.image %}
-                                                <img src="{{ p.get_image_url }}" class="img-responsive img-rounded" />
-                                            {% endif %}
-                                        </div>
-                                        <div class="col-sm-8">
-                                                <h4 class="other-post-title">{{ p.title }}</h4>
-                                        </div>
-                                    </a>
-                                </div>
+                      <div id="other-posts">
+                        <div class="panel panel-default">
+                          <div class="panel-heading">
+                            <h2 class="text-center">Recent</h2>
+                          </div>
+                          <div class="panel-body">
+                            {% for media_post in other_posts %}
+                                {% include "bloginclude/post_media.html" %}
                             {% endfor %}
+                          </div>
                         </div>
+                      </div>
                     {% endif %}
                     <div class="margin-top">
-                        {% with post.blog as blog %}
-                            {% include "maininclude/twitter_timeline.html" %}
-                        {% endwith %}
+                      {% with post.blog as blog %}
+                        {% include "maininclude/twitter_timeline.html" %}
+                      {% endwith %}
                     </div>
                     <div class="margin-top">
                         {% include "google_ads/skyscraper.html" %}
