Revert "add alt tags to images"
This reverts commit 62e48f2f52a8cdbc5bbed2abe04a457f57b94693.

--- a/main/templates/maininclude/recent_post_carousel.html
+++ b/main/templates/maininclude/recent_post_carousel.html
@@ -11,7 +11,7 @@
     {% for p in recent_posts %}
         <div class="item {% if forloop.first %}active{% endif %}">
             <a href="{{ p.get_absolute_url }}">
-              <img src="{{ p.get_image_url }}" alt="{{ p.image_description }}" " class="img-responsive">
+              <img src="{{ p.get_image_url }}" alt="" class="img-responsive">
               <div class="carousel-caption">
                 {{ p.blog }} - {{ p.title }}
               </div>
