--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -28,17 +28,7 @@
                 <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">Read Blog Details</div>
             </div>
             <div class="row well">
-                {% for thumbnail_post in posts %}
-                  {% if forloop.first or forloop.counter0|divisibleby:"2" %}
-                    <div class="row">
-                  {% endif %}
-                    <div class="col-sm-6">
-                      {% include "bloginclude/thumbnail_post.html" %}
-                    </div>
-                  {% if forloop.last or forloop.counter|divisibleby:"2" %}
-                    </div>
-                  {% endif %}
-                {% endfor %}
+                {% include "bloginclude/post_list.html" %}
                 {% if request.user.is_authenticated %}
                     {% with blog as b %}
                         <div class="text-center">
