--- a/blog/templates/bloginclude/post_container.html
+++ b/blog/templates/bloginclude/post_container.html
@@ -3,7 +3,7 @@
         <a href="{{ p.get_absolute_url }}" ><div class="alert alert-brand" role="alert">{{ div_header }}</div></a>
     {% endif %}
     <a class="brand-light" href="{{ p.get_absolute_url }}">
-        <img src="{{ p.get_image_url }}" class="img-responsive img-rounded{% if not p.image %} no-pic{% endif %}" />
+        <img src="{{ p.get_image_url }}" class="img-responsive img-rounded{% if not p.image %} no-pic{% endif %}" alt="{{ p.image_description }}" />
         <h4>{{ p.title }}</h4>
     </a>
     {% if p.headline %}
