--- a/blog/templates/bloginclude/thumbnail_post.html
+++ b/blog/templates/bloginclude/thumbnail_post.html
@@ -1,7 +1,7 @@
 {% if thumbnail_post %}
   <div class="thumbnail">
     <img src="{{ thumbnail_post.image.url }}" class="img-responsive"
-      alt="{{ thumbnail_post.image_desc }}">
+      alt="{{ thumbnail_post.image_description }}">
     <div class="caption">
       <h3>{{ thumbnail_post.title }}</h3>
       <p>{{ thumbnail_post.headline }}</p>
