--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -1,8 +1,9 @@
 {% extends "bloginclude/base.html" %}
+{% load pagination_tags %}
 {% load static %}
 
 {% block title %}
-    Travel Blog - {{ blog }}
+    Travel Blog | {{ blog }}
 {% endblock %}
 
 {% block extra_head %}
@@ -10,50 +11,54 @@
 {% endblock %}
 
 {% block main %}
-    {# Not using this for now, but it works #}
-    {# if blog.google_id #}
-        <!--<div class="row">-->
-            <!--<img class="img-responsive" src="{{ google_data.cover.coverPhoto.url}}" />-->
-        <!--</div>-->
-    {# endif #}
+  {% autopaginate posts 6 %}
+  {# Not using this for now, but it works #}
+  {# if blog.google_id #}
+      <!--<div class="row">-->
+          <!--<img class="img-responsive" src="{{ google_data.cover.coverPhoto.url}}" />-->
+      <!--</div>-->
+  {# endif #}
 
-    <div id="map-side" class="col-md-8">
-        <div id="blog-header-row" class="jumbotron row">
-            <div class="text-center">
-                <h1>{% if blog.logo %}<img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> {% endif %}{{ blog.title }}</h1>
-            </div>
-        </div>
-        <div class="col-sm-offset-1 col-sm-10">
-            <div class="row row-padding">
-                <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">Read Blog Details</div>
-            </div>
-            <div class="row well">
-                {% for thumbnail_post in posts %}
-                  {% if forloop.first or forloop.counter0|divisibleby:"2" %}
-                      <div class="row">
-                    {% endif %}
-                      <div class="col-sm-6">
-                        {% include "bloginclude/thumbnail_post.html" %}
-                      </div>
-                    {% if forloop.last or forloop.counter|divisibleby:"2" %}
-                      </div>
-                    {% endif %}
-                {% endfor %}
-                {% if request.user.is_authenticated %}
-                    {% with blog as b %}
-                        <div class="text-center">
-                            {% include 'bloginclude/wave_modify.html' %}
-                        </div>
-                    {% endwith %}
+  <div id="map-side" class="col-md-8">
+      <div id="blog-header-row" class="jumbotron row">
+          <div class="text-center">
+              <h1>{% if blog.logo %}<img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> {% endif %}{{ blog.title }}</h1>
+          </div>
+      </div>
+      <div class="col-sm-offset-1 col-sm-10">
+          <div class="row row-padding">
+              <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">Read Blog Details</div>
+          </div>
+          <div class="row well">
+              {% for thumbnail_post in posts %}
+                {% if forloop.first or forloop.counter0|divisibleby:"2" %}
+                  <div class="row">
                 {% endif %}
-            </div>
-        </div>
-    </div>
-    <div id="map-container">
-        {% include "bloginclude/blog_map.html" %}
-        <div id="map-canvas"></div>
-    </div>
-    {% include "bloginclude/modals/blog_info.html" %}
+                  <div class="col-sm-6">
+                    {% include "bloginclude/thumbnail_post.html" %}
+                  </div>
+                {% if forloop.last or forloop.counter|divisibleby:"2" %}
+                  </div>
+                {% endif %}
+              {% endfor %}
+              <div class="text-center">
+                  {% paginate %}
+              </div>
+              {% if request.user.is_authenticated %}
+                  {% with blog as b %}
+                      <div class="text-center">
+                          {% include 'bloginclude/wave_modify.html' %}
+                      </div>
+                  {% endwith %}
+              {% endif %}
+          </div>
+      </div>
+  </div>
+  <div id="map-container">
+      {% include "bloginclude/blog_map.html" %}
+      <div id="map-canvas"></div>
+  </div>
+  {% include "bloginclude/modals/blog_info.html" %}
 {% endblock %}
 
 {% block footer %}
