--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -32,12 +32,12 @@
                     </div>
                     <div class="row">
                         {% with post.get_prev_blog_post as thumbnail_post %}
-                          <div class="col-xs-6">
+                          <div class="col-sm-6">
                             {% include "bloginclude/thumbnail_post.html" %}
                           </div>
                         {% endwith %}
                         {% with post.get_next_blog_post as thumbnail_post %}
-                          <div class="col-xs-6">
+                          <div class="col-sm-6">
                             {% include "bloginclude/thumbnail_post.html" %}
                           </div>
                         {% endwith %}
