--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -22,7 +22,12 @@
   <div id="map-side" class="col-md-8">
       <div id="blog-header-row" class="jumbotron row">
           <div class="text-center">
-              <h1>{% if blog.logo %}<img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> {% endif %}{{ blog.title }}</h1>
+              <h1>
+                {% if object.logo %}
+                  <img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> 
+                {% endif %}
+                {{ object.title }}
+              </h1>
           </div>
       </div>
       <div class="col-sm-offset-1 col-sm-10">
